# OpenClawCommitBlocker

./: README.md  pyproject.toml
.github/workflows/: pr-ai-assessment.yml  pr-ai-feedback.yml
config/: default_signals.yaml  default_weights.json
docs/: signal-taxonomy.md  signals.md
eval/: README.md  config.json  examples.template.jsonl
scripts/: process_reaction_feedback.py  render_pr_comment.py
src/commit_blocker/: __init__.py  cli.py  eval.py  model.py  report.py  scorer.py  signals.py
